Add api features

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=teacherapi
 spring.datasource.url=jdbc:postgresql://localhost:5432/TeacherAPI_dev
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=84051408oi
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
