--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,13 @@
 	<groupId>com.infnet</groupId>
 	<artifactId>teacherapi</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>teacherapi</name>
 	<description>A teacher microservice</description>
 	<properties>
 		<java.version>21</java.version>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
